feat: support redis-v4-cluster

--- a/package.json
+++ b/package.json
@@ -14,11 +14,16 @@
   "types": "./dist/index.d.ts",
   "scripts": {
     "test": "npm run format:check && tsc && npm run test:redis-v4 && npm run test:redis-v4-specific-channel && npm run test:redis-v3 && npm run test:ioredis",
+    "test:cluster": "npm run format:check && tsc && npm run test:redis-v4-cluster && npm run test:redis-v4-cluster-specific-channel && npm run test:ioredis-cluster && npm run test:ioredis-cluster-specific-channel",
     "test:redis-v4": "nyc mocha --bail --require ts-node/register test/index.ts",
+    "test:redis-v4-cluster": "REDIS_CLIENT=redis-v4-cluster nyc mocha --bail --require ts-node/register test/index.ts",
+    "test:redis-v4-cluster-specific-channel": "REDIS_CLIENT=redis-v4-cluster SPECIFIC_CHANNEL=1 nyc mocha --bail --require ts-node/register test/index.ts",
     "test:redis-v4-specific-channel": "SPECIFIC_CHANNEL=1 nyc mocha --bail --require ts-node/register test/index.ts",
     "test:redis-v3": "REDIS_CLIENT=redis-v3 nyc mocha --bail --require ts-node/register test/index.ts",
     "test:ioredis": "REDIS_CLIENT=ioredis nyc mocha --bail --require ts-node/register test/index.ts",
     "test:ioredis-cluster": "REDIS_CLIENT=ioredis-cluster nyc mocha --bail --require ts-node/register test/index.ts",
+    "test:ioredis-cluster-specific-channel": "REDIS_CLIENT=ioredis-cluster SPECIFIC_CHANNEL=1 nyc mocha --bail --require ts-node/register test/index.ts",
+    "test:ioredis-cluster-sharded": "REDIS_CLIENT=ioredis-cluster SPUBSUB=1 nyc mocha --bail --require ts-node/register test/index.ts",
     "format:check": "prettier --parser typescript --check 'lib/**/*.ts' 'test/**/*.ts'",
     "format:fix": "prettier --parser typescript --write 'lib/**/*.ts' 'test/**/*.ts'",
     "prepack": "tsc"
@@ -34,11 +39,11 @@
     "@types/mocha": "^8.2.1",
     "@types/node": "^14.14.7",
     "expect.js": "0.3.1",
-    "ioredis": "^4.0.0",
+    "ioredis": "^5.3.0",
     "mocha": "^10.1.0",
     "nyc": "^15.1.0",
     "prettier": "^2.1.2",
-    "redis": "^4.0.0",
+    "redis": "^4.6.4",
     "redis-v3": "npm:redis@^3.1.2",
     "socket.io": "^4.5.0",
     "socket.io-client": "^4.1.1",
