feat: support sharded pub/sub for redis@4 cluster

--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "test": "npm run format:check && tsc && npm run test:redis-v4 && npm run test:redis-v4-specific-channel && npm run test:redis-v3 && npm run test:ioredis",
-    "test:cluster": "npm run format:check && tsc && npm run test:redis-v4-cluster && npm run test:redis-v4-cluster-specific-channel && npm run test:ioredis-cluster && npm run test:ioredis-cluster-specific-channel",
+    "test": "npm run format:check && tsc && npm run test:standalone && npm run test:cluster && npm run test:cluster-sharded",
+    "test:standalone": "npm run test:redis-v4 && npm run test:redis-v4-specific-channel && npm run test:redis-v3 && npm run test:ioredis",
+    "test:cluster": "npm run test:redis-v4-cluster && npm run test:redis-v4-cluster-specific-channel && npm run test:ioredis-cluster && npm run test:ioredis-cluster-specific-channel",
+    "test:cluster-sharded": "npm run test:redis-v4-cluster-sharded && npm run test:redis-v4-cluster-sharded-specific-channel",
     "test:redis-v4": "nyc mocha --bail --require ts-node/register test/index.ts",
     "test:redis-v4-cluster": "REDIS_CLIENT=redis-v4-cluster nyc mocha --bail --require ts-node/register test/index.ts",
+    "test:redis-v4-cluster-sharded": "REDIS_CLIENT=redis-v4-cluster SHARDED_PUBSUB=1 nyc mocha --bail --require ts-node/register test/index.ts",
     "test:redis-v4-cluster-specific-channel": "REDIS_CLIENT=redis-v4-cluster SPECIFIC_CHANNEL=1 nyc mocha --bail --require ts-node/register test/index.ts",
     "test:redis-v4-specific-channel": "SPECIFIC_CHANNEL=1 nyc mocha --bail --require ts-node/register test/index.ts",
+    "test:redis-v4-cluster-sharded-specific-channel": "REDIS_CLIENT=redis-v4-cluster SHARDED_PUBSUB=1 SPECIFIC_CHANNEL=1 nyc mocha --bail --require ts-node/register test/index.ts",
     "test:redis-v3": "REDIS_CLIENT=redis-v3 nyc mocha --bail --require ts-node/register test/index.ts",
     "test:ioredis": "REDIS_CLIENT=ioredis nyc mocha --bail --require ts-node/register test/index.ts",
     "test:ioredis-cluster": "REDIS_CLIENT=ioredis-cluster nyc mocha --bail --require ts-node/register test/index.ts",
